# go_bazel_tutorial

./: .gitignore  BUILD.bazel  README.md  deps.bzl  go.mod
src/: BUILD.bazel  main.go
src/greet/: BUILD.bazel  greet.go  greet_test.go
