load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/peammy1146/go_bazel_tutorial/src",
    visibility = ["//visibility:private"],
    deps = [
        "//src/greet",
        "@com_github_gofiber_fiber_v2//:go_default_library",
    ],
)

go_binary(
    name = "src",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)
